corrected the useless code "align: center;"

--- a/assets/scss/base.scss
+++ b/assets/scss/base.scss
@@ -8,6 +8,6 @@ $added: 20px;
 	margin: $added;
 
 	.nav_added {
-	align: center;
+
 	}
 }
